--- a/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj
+++ b/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj
@@ -666,6 +666,7 @@
       <FloatingPointModel>Fast</FloatingPointModel>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <DisableSpecificWarnings>4819</DisableSpecificWarnings>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
