--- a/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj
+++ b/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj
@@ -672,6 +672,7 @@
       <EnableEnhancedInstructionSet>AdvancedVectorExtensions512</EnableEnhancedInstructionSet>
       <FloatingPointModel>Fast</FloatingPointModel>
       <DisableSpecificWarnings>4819</DisableSpecificWarnings>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
