rewrite entity list

--- a/msvc/hl2/game_client_hl1mp/game_client_hl1mp.vcxproj.filters
+++ b/msvc/hl2/game_client_hl1mp/game_client_hl1mp.vcxproj.filters
@@ -1029,9 +1029,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1547,6 +1544,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\client\hl1\hl1_clientscoreboard.cpp">
       <Filter>源文件\HL1 DLL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
