--- a/msvc/hl2/game_client_hl2mp/game_client_hl2mp.vcxproj.filters
+++ b/msvc/hl2/game_client_hl2mp/game_client_hl2mp.vcxproj.filters
@@ -1074,9 +1074,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1682,6 +1679,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\client\hl2mp\hud_deathnotice.cpp">
       <Filter>源文件\HL2MP</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
