--- a/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj.filters
+++ b/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj.filters
@@ -1113,9 +1113,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1793,6 +1790,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\cstrike\weapon_xm1014.cpp">
       <Filter>源文件\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
