--- a/msvc/hl2/game_client_dod/game_client_dod.vcxproj.filters
+++ b/msvc/hl2/game_client_dod/game_client_dod.vcxproj.filters
@@ -885,9 +885,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1772,6 +1769,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\weapon_ifmsteadycam.cpp">
       <Filter>源文件\IFM</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
