--- a/msvc/hl2/game_client_episodic/game_client_episodic.vcxproj.filters
+++ b/msvc/hl2/game_client_episodic/game_client_episodic.vcxproj.filters
@@ -1092,9 +1092,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1640,6 +1637,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\client\episodic\c_prop_scalable.cpp">
       <Filter>源文件\HL2 DLL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
