--- a/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj.filters
+++ b/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj.filters
@@ -879,9 +879,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1538,6 +1535,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\server\hl1\hl1_weapon_crowbar.cpp">
       <Filter>源文件\HL1 DLL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
