--- a/msvc/hl2/game_client_hl2/game_client_hl2.vcxproj.filters
+++ b/msvc/hl2/game_client_hl2/game_client_hl2.vcxproj.filters
@@ -522,9 +522,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\client\entityoriginmaterialproxy.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1603,6 +1600,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\tier0\memoverride.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
