--- a/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
+++ b/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
@@ -1194,9 +1194,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1739,6 +1736,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\cstrike\weapon_xm1014.cpp">
       <Filter>源文件\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
