--- a/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj.filters
+++ b/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj.filters
@@ -1293,9 +1293,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1745,6 +1742,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\server\episodic\prop_scalable.cpp">
       <Filter>源文件\HL2_DLL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
