--- a/msvc/hl2/game_server_hl1/game_server_hl1.vcxproj.filters
+++ b/msvc/hl2/game_server_hl1/game_server_hl1.vcxproj.filters
@@ -855,9 +855,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1520,6 +1517,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\hl1\hl1mp_weapon_shotgun.cpp">
       <Filter>源文件\HL1 DLL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
