--- a/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
+++ b/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
@@ -1116,9 +1116,6 @@
     <ClCompile Include="..\..\..\game\shared\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\EntityParticleTrail_Shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1523,6 +1520,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\server\hl1\hl1_weapon_crowbar.cpp">
       <Filter>源文件\HL1 DLL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
