--- a/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
@@ -372,9 +372,6 @@
     <ClCompile Include="..\..\..\game\server\entitylist.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\server\EntityParticleTrail.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1703,6 +1700,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\script_intro_shared.cpp">
       <Filter>源文件\HL2_DLL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
