--- a/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj.filters
@@ -390,9 +390,6 @@
     <ClCompile Include="..\..\..\game\server\entitylist.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\entitylist_base.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\server\EntityParticleTrail.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1733,6 +1730,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\hl2mp\weapon_stunstick.cpp">
       <Filter>源文件\HL2MP</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
