rewrite entity list base

--- a/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj
+++ b/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj
@@ -583,6 +583,9 @@
     <ClCompile Include="..\..\..\public\studio.cpp" />
     <ClCompile Include="..\..\..\public\tier0\memoverride.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\public\server_class.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
