--- a/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
+++ b/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
@@ -1741,4 +1741,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\public\server_class.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
