rewrite entity list

--- a/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj.filters
+++ b/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj.filters
@@ -1795,4 +1795,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\public\client_class.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
