--- a/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj
+++ b/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj
@@ -601,6 +601,9 @@
     <ClCompile Include="..\..\..\public\vallocator.cpp" />
     <ClCompile Include="..\..\..\public\vgui_controls\vgui_controls.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\public\client_class.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
