--- a/msvc/hl2/engine/engine.vcxproj.filters
+++ b/msvc/hl2/engine/engine.vcxproj.filters
@@ -827,5 +827,11 @@
     <ClCompile Include="..\..\..\engine\masterserver.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\engine\cl_null.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\engine\sv_ents_write.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
