--- a/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj
+++ b/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj
@@ -480,7 +480,6 @@
     <ClCompile Include="..\..\..\game\shared\teamplayroundbased_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\teamplay_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp" />
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp" />
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp" />
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\vehicle_viewblend_shared.cpp" />
@@ -515,6 +514,7 @@
     <ClCompile Include="..\..\..\public\studio.cpp" />
     <ClCompile Include="..\..\..\public\tier0\memoverride.cpp" />
     <ClCompile Include="..\..\..\public\tools\bonelist.cpp" />
+    <ClCompile Include="..\..\..\public\usercmd.cpp" />
     <ClCompile Include="..\..\..\public\vallocator.cpp" />
     <ClCompile Include="..\..\..\public\vgui_controls\vgui_controls.cpp" />
   </ItemGroup>
