--- a/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj
+++ b/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj
@@ -555,7 +555,6 @@
     <ClCompile Include="..\..\..\game\shared\teamplay_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\teamplay_round_timer.cpp" />
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp" />
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp" />
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp" />
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\vehicle_viewblend_shared.cpp" />
@@ -586,6 +585,7 @@
     <ClCompile Include="..\..\..\public\stringregistry.cpp" />
     <ClCompile Include="..\..\..\public\studio.cpp" />
     <ClCompile Include="..\..\..\public\tier0\memoverride.cpp" />
+    <ClCompile Include="..\..\..\public\usercmd.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
