--- a/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj.filters
+++ b/msvc/hl2/game_client_cstrike/game_client_cstrike.vcxproj.filters
@@ -1263,9 +1263,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1792,6 +1789,9 @@
       <Filter>源文件\Weapon</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
