--- a/msvc/hl2/game_client_dod/game_client_dod.vcxproj.filters
+++ b/msvc/hl2/game_client_dod/game_client_dod.vcxproj.filters
@@ -1032,9 +1032,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1771,6 +1768,9 @@
       <Filter>源文件\IFM</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
