--- a/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj.filters
+++ b/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj.filters
@@ -1026,9 +1026,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1537,6 +1534,9 @@
       <Filter>源文件\HL1 DLL</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
