--- a/msvc/hl2/game_client_hl2/game_client_hl2.vcxproj.filters
+++ b/msvc/hl2/game_client_hl2/game_client_hl2.vcxproj.filters
@@ -909,9 +909,6 @@
     <ClCompile Include="..\..\..\game\client\toggletextureproxy.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1603,6 +1600,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
