--- a/msvc/hl2/game_client_hl2mp/game_client_hl2mp.vcxproj
+++ b/msvc/hl2/game_client_hl2mp/game_client_hl2mp.vcxproj
@@ -529,7 +529,6 @@
     <ClCompile Include="..\..\..\game\shared\teamplay_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\teamplay_round_timer.cpp" />
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp" />
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp" />
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp" />
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\vehicle_viewblend_shared.cpp" />
@@ -563,6 +562,7 @@
     <ClCompile Include="..\..\..\public\studio.cpp" />
     <ClCompile Include="..\..\..\public\tier0\memoverride.cpp" />
     <ClCompile Include="..\..\..\public\tools\bonelist.cpp" />
+    <ClCompile Include="..\..\..\public\usercmd.cpp" />
     <ClCompile Include="..\..\..\public\vallocator.cpp" />
     <ClCompile Include="..\..\..\public\vgui_controls\vgui_controls.cpp" />
   </ItemGroup>
