--- a/msvc/hl2/game_client_portal/game_client_portal.vcxproj.filters
+++ b/msvc/hl2/game_client_portal/game_client_portal.vcxproj.filters
@@ -1221,9 +1221,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1732,6 +1729,9 @@
       <Filter>源文件\Portal</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
