--- a/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj
+++ b/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj
@@ -551,7 +551,6 @@
     <ClCompile Include="..\..\..\game\shared\teamplayroundbased_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\teamplay_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp" />
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp" />
     <ClCompile Include="..\..\..\game\shared\usermessages.cpp" />
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\vehicle_viewblend_shared.cpp" />
@@ -582,6 +581,7 @@
     <ClCompile Include="..\..\..\public\stringregistry.cpp" />
     <ClCompile Include="..\..\..\public\studio.cpp" />
     <ClCompile Include="..\..\..\public\tier0\memoverride.cpp" />
+    <ClCompile Include="..\..\..\public\usercmd.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\game\server\cbase.h" />
