--- a/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj.filters
+++ b/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj.filters
@@ -1437,9 +1437,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1744,6 +1741,9 @@
       <Filter>源文件\HL2_DLL</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
