--- a/msvc/hl2/game_server_hl1/game_server_hl1.vcxproj.filters
+++ b/msvc/hl2/game_server_hl1/game_server_hl1.vcxproj.filters
@@ -999,9 +999,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1519,6 +1516,9 @@
       <Filter>源文件\HL1 DLL</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
