--- a/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
+++ b/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
@@ -1260,9 +1260,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1522,6 +1519,9 @@
       <Filter>源文件\HL1 DLL</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
