--- a/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
@@ -939,9 +939,6 @@
     <ClCompile Include="..\..\..\game\server\triggers.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\server\util.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1702,6 +1699,9 @@
       <Filter>源文件\HL2_DLL</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
