--- a/msvc/hl2/game_server_portal/game_server_portal.vcxproj.filters
+++ b/msvc/hl2/game_server_portal/game_server_portal.vcxproj.filters
@@ -1425,9 +1425,6 @@
     <ClCompile Include="..\..\..\game\shared\test_ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\usercmd.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\util_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1852,6 +1849,9 @@
       <Filter>源文件\Portal</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\entitylist_base.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\usercmd.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
