try to rewrite portal code

--- a/msvc/hl2/game_client_hl2mp/game_client_hl2mp.vcxproj.filters
+++ b/msvc/hl2/game_client_hl2mp/game_client_hl2mp.vcxproj.filters
@@ -1683,5 +1683,8 @@
     <ClCompile Include="..\..\..\public\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
