--- a/msvc/hl2/game_client_episodic/game_client_episodic.vcxproj.filters
+++ b/msvc/hl2/game_client_episodic/game_client_episodic.vcxproj.filters
@@ -1641,5 +1641,8 @@
     <ClCompile Include="..\..\..\public\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
