--- a/msvc/hl2/game_client_hl2/game_client_hl2.vcxproj
+++ b/msvc/hl2/game_client_hl2/game_client_hl2.vcxproj
@@ -615,6 +615,7 @@
     <ClCompile Include="..\..\..\game\shared\physics_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_posecontroller.cpp" />
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\precache_register.cpp" />
     <ClCompile Include="..\..\..\game\shared\predictableid.cpp" />
     <ClCompile Include="..\..\..\game\shared\predictioncopy.cpp" />
