--- a/msvc/hl2/game_server_dod/game_server_dod.vcxproj
+++ b/msvc/hl2/game_server_dod/game_server_dod.vcxproj
@@ -462,6 +462,7 @@
     <ClCompile Include="..\..\..\game\shared\playerclass_info_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_posecontroller.cpp" />
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\precache_register.cpp" />
     <ClCompile Include="..\..\..\game\shared\predictableid.cpp" />
     <ClCompile Include="..\..\..\game\shared\props_shared.cpp" />
