--- a/msvc/hl2/game_server_hl1/game_server_hl1.vcxproj.filters
+++ b/msvc/hl2/game_server_hl1/game_server_hl1.vcxproj.filters
@@ -1521,5 +1521,8 @@
     <ClCompile Include="..\..\..\public\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
