--- a/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
+++ b/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
@@ -1524,5 +1524,8 @@
     <ClCompile Include="..\..\..\public\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
