--- a/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj.filters
@@ -1734,5 +1734,8 @@
     <ClCompile Include="..\..\..\public\ehandle.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
