--- a/msvc/hl2/game_server_portal/game_server_portal.vcxproj
+++ b/msvc/hl2/game_server_portal/game_server_portal.vcxproj
@@ -565,13 +565,13 @@
     <ClCompile Include="..\..\..\game\shared\portal\portal_player_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_shareddefs.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_usermessages.cpp" />
-    <ClCompile Include="..\..\..\game\shared\portal\portal_util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_weapon_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\prop_portal_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\StaticCollisionPolyhedronCache.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalbase.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalbasecombatweapon.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalgun_shared.cpp" />
+    <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\precache_register.cpp" />
     <ClCompile Include="..\..\..\game\shared\predictableid.cpp" />
     <ClCompile Include="..\..\..\game\shared\props_shared.cpp" />
